hice los section en html

--- a/PROYECTOBAM/index.html
+++ b/PROYECTOBAM/index.html
@@ -7,49 +7,37 @@
         <title>inicio de proyecto</title>
     </head>
     <body>
-        <header>Encabezado</header>
+        <header>
+        </header>
         <nav>
-            <a href="https://www.google.com.ar/"></a>
-            <a href="#textolargo">Link a texto largo</a>
-            <a href="/pages/ejercicio.html">Ejercicio</a>
         </nav>
         <section>
-            <article></article>
+            <article</article> 
             <article></article>
             <article></article>
             <article></article>
         </section>
         <footer></footer>
 
-        <h1>Titulo 1</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore libero corrupti iure sapiente perspiciatis, omnis deserunt impedit aperiam fuga odit laboriosam quae itaque voluptatum porro tempora neque, dolor incidunt saepe?</p>
-        <br>
-        hola que tal 
-        </p>
+        <h1>LA IMPORTANCIA DE HACER DEPORTE</h1>
+        <p>Hacer actividad fisica regularmente puede ayudarte a mantener fuertes tus habilidades para pensar, aprender y tener buen juicio conn el pasar de los años.Tambien puede reducior tu riesgo de depresion y ansidad, al igual que ayudarte a dormir</p>
 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore libero corrupti iure sapiente perspiciatis, omnis deserunt impedit aperiam fuga odit laboriosam quae itaque voluptatum porro tempora neque, dolor incidunt saepe?</p>
-        <br>
-        hola que tal 
-        </p>
+        <h2>BENEFICIO DE HACER DEPORTE</h2>
+        <P>
+            
+        </P>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore libero corrupti iure sapiente perspiciatis, omnis deserunt impedit aperiam fuga odit laboriosam quae itaque voluptatum porro tempora neque, dolor incidunt saepe?</p>
-        <br>
-        hola que tal 
-        </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ikf4Wb-HLbM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h3>FORMULARIO DE INSCRIPCION</h2>
+    <P>porfavor completar el formulario</P>
+    <label for="nombre">Nombre:</label> <br>
+    <input type="Nombre"  id="nombre" ><br>
+    <label for="Apellido">Apellido</label> <br>
+    <input type="Apellido" id="apellido" ><br>
+    <label for="Dni">Dni</label> <br>
+    <input type="Dni"  id="Dni" ><br>
+    <label for="telefono">telefono</label> <br>
+    <input type="telefono"  id="Telefono" ><br>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore libero corrupti iure sapiente perspiciatis, omnis deserunt impedit aperiam fuga odit laboriosam quae itaque voluptatum porro tempora neque, dolor incidunt saepe?</p>
-        <br>
-        hola que tal 
-        </p>
-
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore libero corrupti iure sapiente perspiciatis, omnis deserunt impedit aperiam fuga odit laboriosam quae itaque voluptatum porro tempora neque, dolor incidunt saepe?</p>
-        <br>
-        hola que tal 
-        </p>
-
-        <p id="texto largo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore libero corrupti iure sapiente perspiciatis, omnis deserunt impedit aperiam fuga odit laboriosam quae itaque voluptatum porro tempora neque, dolor incidunt saepe?</p>
-        <br>
-        hola que tal 
-        </p>
     </body>
-</html  
+</html<
